# Practica_PokedexApi

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py
app/routers/: auth.py  pokedex.py  pokemon.py  teams.py
app/services/: pokeapi_service.py
tests/: conftest.py  test_auth.py  test_pokeapi_service.py  test_pokedex.py  test_pokemon.py  test_teams.py
