[project]
name = "practica-pokedex-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "deprecated==1.2.18",
    "fastapi==0.120.1",
    "httpx>=0.28.1",
    "iniconfig==2.3.0",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pluggy==1.6.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings>=2.11.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "python-jose>=3.5.0",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "starlette==0.49.1",
    "uvicorn>=0.38.0",
    "wrapt==1.17.3",
]
